Fixing java 8 compatibility test issues